--- a/templates/index.html
+++ b/templates/index.html
@@ -2,37 +2,61 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        #container {
-            width: 50%;
-            margin: auto;
-            text-align: center;
-        }
-
-        button {
-            margin: 10px;
-            padding: 5px 30px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spam Detection</title>
+  <style>
+    * {
+      margin: 10px auto;
+      border-radius: 5px;
+      padding: 10px;
+      text-align: center;
+    }
+    form {
+      background-color: lightgreen;
+    }
+    #button {
+      background-color: lightskyblue;
+      border: 0.5px solid black;
+      padding: 5px 30px;
+      margin: 10px;
+    }
+    #result {
+      background-color: lightpink;
+    }
+    h1 {
+      background-color: lightgoldenrodyellow;
+      margin: 0px;
+    }
+    #container {
+      width: 80%;
+      margin: auto;
+      text-align: center;
+      border: 2px solid black;
+      padding: 10px;
+      border-radius: 10px;
+    }
+  </style>
 </head>
 
-<body>
-    <div id="container">
-        <h1>Spam Detection</h1>
+<body class="bd">
+  <div id="container">
+    <h1>Spam Detection</h1><br />
+    <form action="/predict" method="POST" enctype="multipart/form-data">
+      Upload File:
+      <input type="file" accept=".csv" name="file" /><br /><br />
+      <input id="button" type="submit" value="Submit" />
+    </form>
+    <form action="/forward" method="POST" enctype="multipart/form-data">
+      Enter Text: <input type="text" name="text"> <br /><br/>
+      <input id="button" type="submit" value="Submit" />
+      <div id="result">
+        {{value}}
+      </div>
+  </form>
 
-        <form action="/forward/" method="POST">
-            First Name: <input type="text" name="first_name"> <br />
-            <input type="submit" value="Submit" />
-            <div>
-                {{value}}
-            </div>
-        </form>
-
-    </div>
+  </div>
 </body>
 
 </html>
